--- a/css.css
+++ b/css.css
@@ -115,7 +115,7 @@ body {
 }
 
 .list-wrapper li:nth-child(1):hover::after {
-    content: url(./resouse/登临意/chen-activity.png);
+    content: url(./resource/chen-activity.png);
     position: absolute;
     top: -580px;
     left: -30px;
@@ -124,7 +124,7 @@ body {
 }
 
 .list-wrapper li:nth-child(2):hover::after {
-    content: url(./resouse/登临意/qiubai-activity.png);
+    content: url(./resource/qiubai-activity.png);
     position: absolute;
     top: -580px;
     left: -30px;
@@ -132,7 +132,7 @@ body {
     transition: all 0.3s ease;
 }
 .list-wrapper li:nth-child(3):hover::after {
-    content: url(./resouse/登临意/shouren-activity.png);
+    content: url(./resource/shouren-activity.png);
     position: absolute;
     top: -640px;
     left: 300px;
@@ -140,7 +140,7 @@ body {
     transition: all 0.3s ease;
 }
 .list-wrapper li:nth-child(4):hover::after {
-    content: url(./resouse/登临意/chongyve-activity.png);
+    content: url(./resource/chongyve-activity.png);
     position: absolute;
     top: -550px;
     left: 280px;
@@ -149,7 +149,7 @@ body {
     /* transform: scale(1.2); */
 }
 .list-wrapper li:nth-child(5):hover::after {
-    content: url(./resouse/登临意/lin-activity.png);
+    content: url(./resource/lin-activity.png);
     position: absolute;
     top: -600px;
     left: 730px;
@@ -157,7 +157,7 @@ body {
     transition: all 0.3s ease;
 }
 .list-wrapper li:nth-child(6):hover::after {
-    content: url(./resouse/登临意/woman1-activity.png);
+    content: url(./resource/woman1-activity.png);
     position: absolute;
     top: -370px;
     left: 1230px;
